tests/catch.out
^^^
Error: Something happened
	at <nim> @.script(tests/catch.b:3:23-60)